--- a/src/components/categorias/listaCategoria/ListaCategoria.css
+++ b/src/components/categorias/listaCategoria/ListaCategoria.css
@@ -1,4 +1,5 @@
-.listaCategoria{
+
+/*.listaCategoria{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     width: 80vw;
@@ -18,7 +19,7 @@
     place-items: center;
     height: 80vh;
   }
-  
+  */
   .loader{
     display: block;
     position: relative;
