padronização dos botões em deletarCategoria e deletarProduto

--- a/src/index.css
+++ b/src/index.css
@@ -12,13 +12,13 @@
 }
 
 * {
+  font-family: "Poppins", sans-serif !important;
   margin: 0;
   /* font-family: "Antic One", cursive !important; */
 }
 html,
 body {
   height: 100%;
-  font-family: "Poppins", sans-serif;
 }
 body {
   line-height: 1.5;
