--- a/src/components/categorias/listaCategoria/ListaCategoria.css
+++ b/src/components/categorias/listaCategoria/ListaCategoria.css
@@ -55,3 +55,24 @@
   .alinhamentoCardsCategoria {
     justify-content: space-evenly;
   }
+
+  .descricaoCategoria {
+    padding-right: 10px;
+    overflow-y: auto;
+    display: flex;
+    align-items: center;
+}
+
+.descricaoCategoria::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  .descricaoCategoria::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+  }
+  
+  .descricaoCategoria::-webkit-scrollbar-thumb {
+    background-color:  rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+  }
