Ajustes na Navbar, Carrossel, Lista Produto e Cadastro Usuário.

--- a/src/components/carrossel/Carrossel.css
+++ b/src/components/carrossel/Carrossel.css
@@ -1,14 +1,14 @@
 .img1 {
 
     height: 65vh;
-    background-image: url(https://i.imgur.com/NW22fWK.jpg);
+    background-image: url(https://i.imgur.com/SBitYgF.jpg);
     background-size: cover;
     background-position: 50%;
 }
 
 .img2 {
     height: 65vh;
-    background-image: url(https://i.imgur.com/foWIVsO.jpg);
+    background-image: url(https://i.imgur.com/dsw60EH.jpg);
     background-size: cover;
 
 }
@@ -21,10 +21,9 @@
 
 }
 
-
 .img4 {
     height: 65vh;
-    background-image: url(https://i.imgur.com/PfJcsTw.jpg);
+    background-image: url(https://i.imgur.com/foWIVsO.jpg);
     background-size: cover;
 
 }
